--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,4 +13,13 @@ html {
 
 body {
     font-size: 1.6rem;
+    background-color: rgb(240, 240, 240) !important;
+}
+
+ul {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
 }
