--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -1,4 +1,5 @@
 @import "../../styles/variables";
+@import "../../styles/breakpoints";
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -32,6 +33,7 @@
     color: $color-black;
   }
 }
+
 .sign-up-btn {
   background-color: $color-primary;
   border: 1px solid $color-primary;
