--- a/styles/_breakpoints.scss
+++ b/styles/_breakpoints.scss
@@ -1,10 +1,17 @@
 $breakpoints: (
+  "xs": "450px",
   "sm": "640px",
   "md": "768px",
   "lg": "1024px",
   "xl": "1280px",
   "xxl": "1536px",
 );
+
+@mixin xs {
+  @media screen and (max-width: map-get($breakpoints,"xs")) {
+    @content;
+  }
+}
 
 @mixin sm {
   @media screen and (max-width: map-get($breakpoints,"sm")) {
