--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -5,7 +5,11 @@
   justify-content: space-between;
   align-items: center;
   padding: 2rem 2rem;
-  //   background-color: $color-white;
+  z-index: 3;
+  // background-color: $color-white;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 .logo {
