--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -2,4 +2,5 @@
 $color-white: #ffffff;
 $color-black: #000;
 $color-grey: rgb(121, 121, 121);
+$color-grey-light: #dfdfdf;
 $color-primary: #9333ea;
