made the info section

--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -37,6 +37,7 @@
     font-size: 1.3rem;
     font-weight: 700;
     transition: color 0.2s;
+    font-family: "Inter", sans-serif;
   }
   a:hover {
     color: $color-black;
