--- a/components/LandingPage/InfoSection/InfoSection.module.scss
+++ b/components/LandingPage/InfoSection/InfoSection.module.scss
@@ -1,5 +1,19 @@
-@import "../../../styles//variables";
+@import "../../../styles/variables";
+@import "../../../styles/breakpoints";
 .section-info {
   width: 80%;
   margin: 9rem auto;
+  .section-heading {
+    margin-bottom: 6rem;
+    font-family: "Montserrat", sans-serif;
+    font-size: 5rem;
+    font-weight: 700;
+    color: $color-grey;
+    @include md {
+      font-size: 4rem;
+    }
+    @include sm {
+      font-size: 3rem;
+    }
+  }
 }
