added scroll animation to info cards

--- a/components/LandingPage/InfoSection/InfoCard/InfoCard.module.scss
+++ b/components/LandingPage/InfoSection/InfoCard/InfoCard.module.scss
@@ -5,9 +5,11 @@
   border-radius: 2px;
   background-color: $color-white;
   box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  transition: transform 0.2s;
   cursor: default;
+  transform: translateY(100px);
   height: 30rem;
+  transition: all 1s ease;
+  opacity: 0;
 
   @include md {
     height: 30rem;
@@ -19,9 +21,7 @@
   @include xs {
     height: 30rem;
   }
-  &:hover {
-    transform: translateY(-20px);
-  }
+
   .card-header {
     display: flex;
     flex-direction: column;
@@ -51,4 +51,8 @@
       font-family: "Inter", sans-serif;
     }
   }
+}
+.animate {
+  transform: translateY(0);
+  opacity: 1;
 }
