--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -3,4 +3,8 @@ $color-white: #ffffff;
 $color-black: #000;
 $color-grey: rgb(121, 121, 121);
 $color-grey-light: #dfdfdf;
+$color-grey-dark: rgb(66, 66, 66);
 $color-primary: #9333ea;
+//shadows
+$shadow-primary: 0 10px 15px -3px rgb(0 0 0 / 0.1),
+  0 4px 6px -4px rgb(0 0 0 / 0.1); ;
