--- a/components/LandingPage/TestimonialSection/TestimonialSection.module.scss
+++ b/components/LandingPage/TestimonialSection/TestimonialSection.module.scss
@@ -5,4 +5,12 @@
 .carousel-container {
   width: 80%;
   margin-top: 4rem;
+  opacity: 0;
+  transform: translateY(100px);
+  transition: all 1s;
+}
+
+.animate {
+  transform: translateY(0);
+  opacity: 1;
 }
