--- a/components/LandingPage/TestimonialSection/TestimonialSection.module.scss
+++ b/components/LandingPage/TestimonialSection/TestimonialSection.module.scss
@@ -1,13 +1,17 @@
-.section-testimonial {
-  width: 80%;
-  margin: 9rem auto;
-}
+@import "../../../styles/breakpoints";
+
 .carousel-container {
   width: 80%;
   margin-top: 4rem;
   opacity: 0;
   transform: translateY(100px);
   transition: all 1s;
+  @include xl {
+    width: 100%;
+  }
+  @include lg {
+    margin: 2rem auto;
+  }
 }
 
 .animate {
