--- a/components/LandingPage/TestimonialSection/BigTestimonial/BigTestimonial.module.scss
+++ b/components/LandingPage/TestimonialSection/BigTestimonial/BigTestimonial.module.scss
@@ -3,6 +3,9 @@
   width: 80%;
   justify-content: space-between;
   height: 32rem;
+  transition: all 1s;
+  transform: translateY(100px);
+  opacity: 0;
 }
 .avatar-container {
   width: 30%;
@@ -13,4 +16,9 @@
 
 .content-container {
   width: 60%;
+}
+
+.animate {
+  transform: translateY(0);
+  opacity: 1;
 }
