made the big testimonial responsive

--- a/styles/_breakpoints.scss
+++ b/styles/_breakpoints.scss
@@ -39,3 +39,9 @@ $breakpoints: (
     @content;
   }
 }
+
+@mixin breakpoint($breakpoint) {
+  @media screen and (max-width: $breakpoint) {
+    @content;
+  }
+}
