--- a/components/LandingPage/TestimonialSection/BigTestimonial/BigTestimonial.module.scss
+++ b/components/LandingPage/TestimonialSection/BigTestimonial/BigTestimonial.module.scss
@@ -1,3 +1,5 @@
+@import "../../../../styles/breakpoints";
+
 .big-testimonial {
   display: flex;
   width: 80%;
@@ -6,16 +8,43 @@
   transition: all 1s;
   transform: translateY(100px);
   opacity: 0;
+  @include xl {
+    width: 100%;
+  }
+  @include lg {
+    flex-direction: column;
+  }
 }
 .avatar-container {
   width: 30%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  @include lg {
+    flex-direction: row;
+    width: 100%;
+    margin-bottom: 4rem;
+  }
+  @include breakpoint(820px) {
+    flex-direction: column;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  @include sm {
+    width: 60%;
+  }
+  @include xs {
+    width: 80%;
+  }
 }
 
 .content-container {
   width: 60%;
+  @include lg {
+    width: 80%;
+    margin: 0 auto;
+  }
 }
 
 .animate {
