--- a/components/LandingPage/TestimonialSection/BigTestimonial/TestimonialAvatar/TestimonialAvatar.module.scss
+++ b/components/LandingPage/TestimonialSection/BigTestimonial/TestimonialAvatar/TestimonialAvatar.module.scss
@@ -1,4 +1,5 @@
 @import "../../../../../styles/variables";
+@import "../../../../../styles/breakpoints";
 .avatar {
   display: flex;
   justify-content: center;
@@ -8,7 +9,9 @@
   &:hover {
     background-color: #ebebeb;
   }
-
+  @include breakpoint(820px) {
+    margin-bottom: 2rem;
+  }
   cursor: pointer;
   border-radius: 1rem;
   padding: 1.6rem 3rem;
