made the footer

--- a/components/LandingPage/SectionSignUp/SectionSignUp.module.scss
+++ b/components/LandingPage/SectionSignUp/SectionSignUp.module.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/variables";
 @import "../../../styles/breakpoints";
 .section-sign-up {
-  background-color: $color-grey-dark;
+  background-color: $color-grey-extra-dark;
   display: flex;
   flex-direction: column;
   align-items: center;
