--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -4,6 +4,7 @@ $color-black: #000;
 $color-grey: rgb(121, 121, 121);
 $color-grey-light: #dfdfdf;
 $color-grey-dark: rgb(66, 66, 66);
+$color-grey-extra-dark: rgb(42, 42, 44);
 $color-primary: #9333ea;
 //shadows
 $shadow-primary: 0 10px 15px -3px rgb(0 0 0 / 0.1),
