--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -4,26 +4,68 @@
 .footer {
   background-color: $color-grey-extra-dark;
   border-top: 1px solid $color-grey-dark;
-  padding: 10rem 5rem;
+  padding: 10rem 3rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   .footer-links {
-    display: flex;
-    justify-content: space-around;
-    width: 50%;
+    display: inline-flex;
+    justify-content: center;
+
+    &:not(:last-child) {
+      margin-right: 4rem;
+    }
+
+    @include lg {
+      &:not(:last-child) {
+        margin-right: 3rem;
+      }
+    }
+
+    @include md {
+      display: flex;
+      &:not(:last-child) {
+        margin-right: 0px;
+        margin-bottom: 2rem;
+      }
+    }
+    @include xs {
+      display: inline-flex;
+      flex-direction: column;
+      &:not(:last-child) {
+        margin-right: 4rem;
+      }
+    }
+
     .footer-link {
       color: $color-grey-light;
+      &:not(:last-child) {
+        margin-right: 4rem;
+      }
       cursor: pointer;
       a {
         color: inherit;
       }
+
+      @include lg {
+        &:not(:last-child) {
+          margin-right: 3rem;
+        }
+      }
+
+      @include xs {
+        &:not(:last-child) {
+          margin-bottom: 1rem;
+        }
+      }
     }
+  }
+  .footer-links-container {
+    margin-bottom: 5rem;
   }
   .image-container {
     width: 60px;
     height: 60px;
-    margin-top: 5rem;
   }
   .copyright-text {
     color: $color-grey-light;
