--- a/components/LandingPage/SectionSignUp/SectionSignUp.module.scss
+++ b/components/LandingPage/SectionSignUp/SectionSignUp.module.scss
@@ -6,6 +6,9 @@
   flex-direction: column;
   align-items: center;
   padding: 8rem 2rem;
+  transition: all 1s;
+  transform: translateY(100px);
+  opacity: 0;
   p {
     text-align: center;
     color: $color-white;
@@ -46,4 +49,9 @@
       font-size: 1.6rem;
     }
   }
+}
+
+.animate {
+  transform: translateY(0);
+  opacity: 1;
 }
