added sign-up and log-in in modal

--- a/components/LandingPage/SignUpModal/SignUpComp/SignUpComp.module.scss
+++ b/components/LandingPage/SignUpModal/SignUpComp/SignUpComp.module.scss
@@ -1,4 +1,9 @@
 @import "../../../../styles/variables";
+
+.sign-up-comp {
+  position: relative;
+}
+
 .cta {
   display: flex;
   margin-top: 2rem;
