--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -5,9 +5,14 @@
   background-color: $color-grey-extra-dark;
   border-top: 1px solid $color-grey-dark;
   padding: 10rem 3rem;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  transform: translateY(100%);
   .footer-links {
     display: inline-flex;
     justify-content: center;
