--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,8 @@ html {
 body {
     font-size: 1.6rem;
     background-color: rgb(240, 240, 240) !important;
+    position: relative;
+    min-height: 100vh;
 }
 
 ul {
