--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -31,6 +31,21 @@
   }
 }
 
+.sign-out-btn {
+  background-color: $color-red;
+  border: none;
+  border-radius: 100px;
+  font-size: 1.3rem;
+  font-weight: 600;
+  padding: 0.4rem 1.2rem;
+  font-family: "Inter", sans-serif;
+  color: $color-white;
+  transition: all 0.2s;
+  &:hover {
+    background-color: darken($color: $color-red, $amount: 4%);
+  }
+}
+
 @keyframes showUp {
   from {
     opacity: 0;
@@ -41,7 +56,7 @@
 }
 
 .nav-link {
-  margin-left: 4rem;
+  margin-right: 4rem;
 
   a {
     color: $color-white;
