--- a/components/SideNavbar/SideNavbar.module.scss
+++ b/components/SideNavbar/SideNavbar.module.scss
@@ -1,4 +1,6 @@
 @import "../../styles/variables";
+// @import "../Navbar/Navbar.module.scss";
+
 .side-nav {
   z-index: 5;
   position: fixed;
@@ -30,6 +32,7 @@
   padding: 1rem 0;
   margin: 0.5rem 0;
   border-bottom: 1px solid rgba($color-grey, 0.5);
+  font-family: "Inter", sans-serif;
   a {
     color: $color-grey;
     transition: color 0.2s;
@@ -38,4 +41,17 @@
   a:hover {
     color: $color-black;
   }
+}
+
+.sign-out-btn {
+  border: none;
+  border-radius: 3px;
+  background-color: rgba($color-red, 0.9);
+  width: 100%;
+  text-align: start;
+  padding: 1.4rem 1rem;
+  font-size: 1.8rem;
+  color: $color-white;
+  font-family: "Inter", sans-serif;
+  margin-top: 1rem;
 }
