--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -8,5 +8,4 @@ $color-grey-extra-dark: rgb(42, 42, 44);
 $color-primary: #9333ea;
 $color-red: #ef4444;
 //shadows
-$shadow-primary: 0 10px 15px -3px rgb(0 0 0 / 0.1),
-  0 4px 6px -4px rgb(0 0 0 / 0.1); ;
+$shadow-primary: 0 1px 2px 0 rgb(0 0 0 / 0.05);
