--- a/components/HomePage/SectionRecommendation/SectionRecommendation.module.scss
+++ b/components/HomePage/SectionRecommendation/SectionRecommendation.module.scss
@@ -1,3 +1,4 @@
+@import "../../../styles/breakpoints";
 .section-recommendation {
   width: 90%;
   margin-right: auto;
@@ -7,5 +8,17 @@
     margin-bottom: 3rem;
     font-family: "Montserrat", sans-serif;
     font-size: 2.6rem;
+    @include sm {
+      font-size: 2.2rem;
+    }
+    @include xs {
+      font-size: 1.8rem;
+    }
+  }
+  .meetup-container {
+    @include sm {
+      overflow-y: scroll;
+      height: 30rem;
+    }
   }
 }
