--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -9,3 +9,5 @@ $color-primary: #9333ea;
 $color-red: #ef4444;
 //shadows
 $shadow-primary: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+$shadow-secondary: 0 10px 15px -3px rgb(0 0 0 / 0.1),
+  0 4px 6px -4px rgb(0 0 0 / 0.1);
