made the filter section

--- a/components/HomePage/SectionFilter/SectionFilter.module.scss
+++ b/components/HomePage/SectionFilter/SectionFilter.module.scss
@@ -1,10 +1,11 @@
 @import "../../../styles/breakpoints";
-
-.section-category {
+.section-filter {
   width: 90%;
   margin-left: auto;
   margin-right: auto;
   margin-top: 5rem;
+  //temp
+  padding-bottom: 5rem;
   .heading {
     margin-bottom: 3rem;
     font-family: "Montserrat", sans-serif;
