--- a/components/HomePage/SectionMeetup/SectionMeetup.module.scss
+++ b/components/HomePage/SectionMeetup/SectionMeetup.module.scss
@@ -1,10 +1,10 @@
 @import "../../../styles/breakpoints";
-.section-meetup-tomorrow {
+.section-meetup {
   width: 90%;
   margin-left: auto;
   margin-right: auto;
   margin-top: 5rem;
-  padding-bottom: 5rem;
+  // padding-bottom: 5rem;
   .heading {
     margin-bottom: 3rem;
     font-family: "Montserrat", sans-serif;
