--- a/components/MeetupCard/MeetupCard.module.scss
+++ b/components/MeetupCard/MeetupCard.module.scss
@@ -1,17 +1,13 @@
 @import "../../styles/variables";
-
+@import "../../styles/breakpoints";
 .meetup-card {
   border-radius: 3px;
   overflow: hidden;
   background-color: $color-white;
-  box-shadow: $shadow-primary;
-  transition: 0.4s all;
+  box-shadow: $shadow-secondary;
   position: relative;
   cursor: pointer;
-  &:hover {
-    box-shadow: $shadow-secondary;
-    transform: translateY(-1rem);
-  }
+
   .card-image {
     width: 100%;
     aspect-ratio: 5/3;
@@ -23,6 +19,9 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    @include xl {
+      padding: 1.6rem;
+    }
     .title {
       font-size: 1.7rem;
       font-weight: 700;
