--- a/components/HomePage/SectionCategory/SectionCategory.module.scss
+++ b/components/HomePage/SectionCategory/SectionCategory.module.scss
@@ -5,6 +5,9 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 5rem;
+  transform: translateY(10rem);
+  opacity: 0;
+  transition: all 1s;
   .heading {
     margin-bottom: 3rem;
     font-family: "Montserrat", sans-serif;
@@ -16,4 +19,9 @@
       font-size: 1.8rem;
     }
   }
+}
+
+.animate {
+  transform: translateY(0);
+  opacity: 1;
 }
