--- a/components/HomePage/SectionMeetup/SectionMeetup.module.scss
+++ b/components/HomePage/SectionMeetup/SectionMeetup.module.scss
@@ -4,10 +4,9 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 5rem;
-  transform: translateX(-90%);
+  transform: translateY(10rem);
   opacity: 0;
-  filter: blur(20px);
-  transition: all 0.8s;
+  transition: all 1s;
   .content {
     height: 45rem;
     @include xl {
@@ -35,7 +34,6 @@
 }
 
 .animate {
-  transform: translateX(0);
+  transform: translateY(0);
   opacity: 1;
-  filter: blur(0);
 }
