--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -15,6 +15,44 @@
   }
 }
 
+.dropdown {
+  position: relative;
+  color: $color-grey;
+  cursor: pointer;
+  font-size: 1.3rem;
+  font-weight: 700;
+  transition: color 0.2s;
+  font-family: "Inter", sans-serif;
+  margin-right: 4rem;
+
+  &:hover {
+    color: $color-black;
+    .dropdown-list {
+      display: block;
+    }
+  }
+  .dropdown-list {
+    position: absolute;
+    display: none;
+    background-color: $color-white;
+    top: 2rem;
+    padding: 1rem 0;
+    width: 13rem;
+    box-shadow: $shadow-secondary;
+    .dropdown-item {
+      padding: 0.4rem 1rem;
+      color: $color-grey;
+      cursor: pointer;
+      font-size: 1.3rem;
+      font-weight: 700;
+      transition: color 0.2s;
+      font-family: "Inter", sans-serif;
+      &:hover {
+        color: $color-black;
+      }
+    }
+  }
+}
 .logo {
   width: 4rem;
   height: 4rem;
@@ -59,7 +97,7 @@
   margin-right: 4rem;
 
   a {
-    color: $color-white;
+    color: $color-grey;
     cursor: pointer;
     font-size: 1.3rem;
     font-weight: 700;
@@ -67,7 +105,7 @@
     font-family: "Inter", sans-serif;
   }
   a:hover {
-    color: $color-grey-light;
+    color: $color-black;
   }
 }
 
@@ -104,13 +142,5 @@
   color: $color-black;
   &:hover {
     background-color: lighten($color: $color-primary, $amount: 40%);
-  }
-}
-.black-link {
-  a {
-    color: $color-grey;
-    &:hover {
-      color: $color-black;
-    }
   }
 }
