--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -41,13 +41,16 @@
     box-shadow: $shadow-secondary;
     .dropdown-item {
       padding: 0.4rem 1rem;
-      color: $color-grey;
-      cursor: pointer;
-      font-size: 1.3rem;
-      font-weight: 700;
-      transition: color 0.2s;
-      font-family: "Inter", sans-serif;
-      &:hover {
+      a {
+        color: $color-grey;
+        cursor: pointer;
+        font-size: 1.3rem;
+        font-weight: 700;
+        transition: color 0.2s;
+        font-family: "Inter", sans-serif;
+      }
+
+      a:hover {
         color: $color-black;
       }
     }
