--- a/components/HostMeetupPage/MeetupForm/MeetupForm.module.scss
+++ b/components/HostMeetupPage/MeetupForm/MeetupForm.module.scss
@@ -1,4 +1,5 @@
 @import "../../../styles/variables";
+@import "../../../styles/breakpoints";
 .form-container {
   display: flex;
   justify-content: center;
@@ -9,6 +10,25 @@
   width: 50%;
   background-color: $color-white;
   box-shadow: $shadow-secondary;
+  @include xl {
+    width: 60%;
+  }
+  @include lg {
+    width: 70%;
+  }
+  @include md {
+    padding: 3rem 4rem;
+    width: 80%;
+  }
+  @include sm {
+    padding: 3rem 4rem;
+    width: 90%;
+  }
+
+  @include xs {
+    padding: 2rem 2rem;
+    width: 95%;
+  }
   .button {
     width: 100%;
   }
