--- a/components/MeetupCard/MeetupCard.module.scss
+++ b/components/MeetupCard/MeetupCard.module.scss
@@ -37,6 +37,8 @@
     }
     .card-info {
       display: flex;
+      position: relative;
+      align-items: center;
       .price {
         margin-left: 3rem;
         font-size: 1.6rem;
@@ -48,6 +50,18 @@
       }
       .date {
         font-weight: 600;
+      }
+      .category {
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 1.4rem;
+        width: 10rem;
+        border-radius: 100px;
+        border: 1px solid $color-primary;
+        right: 0;
+        padding: 0 1rem;
       }
     }
   }
