added time stamp in firebase

--- a/components/MeetupCard/MeetupCard.module.scss
+++ b/components/MeetupCard/MeetupCard.module.scss
@@ -52,6 +52,7 @@
         font-weight: 600;
       }
       .category {
+        text-transform: capitalize;
         position: absolute;
         display: flex;
         align-items: center;
