--- a/components/MeetupPage/HeadSection/HeadSection.module.scss
+++ b/components/MeetupPage/HeadSection/HeadSection.module.scss
@@ -1,3 +1,65 @@
+@import "../../../styles/breakpoints";
+@import "../../../styles/variables";
+
 .head-section {
-  margin-top: 6rem;
+  margin-left: 15rem;
+  margin-top: 10rem;
+  width: 60%;
+  padding: 4rem 2rem;
+  border-radius: 3px;
+  border: 1px solid $color-grey-light;
+  .image-container {
+    position: relative;
+    width: 100%;
+    height: 30rem;
+  }
+  .meetup-info {
+    padding-right: 2rem;
+    margin-top: 2rem;
+  }
+  .title-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .title {
+      font-size: 2.8rem;
+      font-family: "Montserrat", sans-serif;
+      font-weight: 600;
+      width: 80%;
+    }
+    .bookmark {
+      cursor: pointer;
+    }
+  }
+  .date-category-container {
+    display: flex;
+    margin-top: 1.6rem;
+    align-items: center;
+    // margin-bottom: 3rem;
+    .date-container {
+      display: flex;
+      align-items: center;
+      cursor: default;
+
+      .calendar {
+        margin-right: 1rem;
+      }
+      .date {
+        font-weight: 600;
+      }
+    }
+    .category {
+      cursor: default;
+      margin-left: 3rem;
+      text-transform: capitalize;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.4rem;
+      border-radius: 100px;
+      border: 1px solid $color-primary;
+      right: 0;
+      padding: 0 1rem;
+    }
+  }
 }
