--- a/styles/meetupPage.module.scss
+++ b/styles/meetupPage.module.scss
@@ -8,6 +8,9 @@
     max-width: 85rem;
   }
   .right {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
     margin-top: 10rem;
     width: 35%;
   }
