made the meetup page responsive

--- a/components/MeetupPage/BookingSection/BookingSection.module.scss
+++ b/components/MeetupPage/BookingSection/BookingSection.module.scss
@@ -3,6 +3,9 @@
 
 .booking-section {
   width: 55%;
+  @include lg {
+    width: 100%;
+  }
   .price {
     display: flex;
     align-items: center;
