--- a/components/AllMeetupsPage/FilterBar/FIlterBar.module.scss
+++ b/components/AllMeetupsPage/FilterBar/FIlterBar.module.scss
@@ -9,16 +9,37 @@
   position: fixed;
   background-color: $color-white;
   width: 100%;
-  // height: 6rem;
+  @include lg {
+    padding: 2rem 3rem;
+  }
+  @include sm {
+    padding: 2rem 2rem;
+  }
 }
 .container {
   display: flex;
   align-items: center;
+  width: 100%;
   .text {
     font-size: 1.4rem;
   }
   .select-container {
     margin-left: 2rem;
-    width: 20rem;
+    width: 20%;
+    @include md {
+      width: 30%;
+    }
+    @include sm {
+      margin-left: 0;
+      margin-top: 1rem;
+      width: 50%;
+    }
+    @include xs {
+      width: 100%;
+    }
+  }
+  @include sm {
+    flex-direction: column;
+    align-items: flex-start;
   }
 }
