added bookmark button

--- a/components/MeetupPage/HeadSection/HeadSection.module.scss
+++ b/components/MeetupPage/HeadSection/HeadSection.module.scss
@@ -27,6 +27,8 @@
     }
     .bookmark {
       cursor: pointer;
+      border: none;
+      background-color: transparent;
     }
   }
   .date-category-container {
