--- a/components/HomePage/Divider/Divider.module.scss
+++ b/components/HomePage/Divider/Divider.module.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   flex-direction: column;
   background-image: linear-gradient(90deg, #462664 0%, #9841e9 100%);
+  margin-top: 3rem;
   @include xl {
     margin-top: 6rem;
   }
