--- a/components/BookmarkPage/AllBookmarksMeetups/AllBookmarkMeetups.module.scss
+++ b/components/BookmarkPage/AllBookmarksMeetups/AllBookmarkMeetups.module.scss
@@ -1,3 +1,27 @@
+@import "../../../styles/breakpoints.scss";
+@import "../../../styles/variables";
 .all-bookmarks {
-  margin-top: 6rem;
+  margin-top: 8rem;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  @include sm {
+    width: 90%;
+  }
+}
+
+.heading-container {
+  margin-bottom: 4rem;
+  .heading {
+    color: $color-grey-extra-dark;
+    font-size: 4rem;
+    @include sm {
+      font-size: 2.4rem;
+    }
+  }
+  .text {
+    color: $color-grey-dark;
+    font-weight: 600;
+    font-size: 1.7rem;
+  }
 }
