--- a/components/ProfilePage/UpcomingEvents/UpcomingEvents.module.scss
+++ b/components/ProfilePage/UpcomingEvents/UpcomingEvents.module.scss
@@ -1,5 +1,33 @@
+@import "../../../styles/breakpoints";
+@import "../../../styles/variables";
 .upcoming-events {
+  margin-top: 3rem;
   width: 80%;
   margin-left: auto;
   margin-right: auto;
+  min-height: 30rem;
+  position: relative;
+  .heading {
+    font-size: 3rem;
+    text-transform: uppercase;
+    color: $color-grey-dark;
+  }
+  .meetup-container {
+    margin-top: 2rem;
+  }
+  .loader {
+    position: absolute;
+    inset: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .no-meetups {
+    position: absolute;
+    inset: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 5rem;
+  }
 }
