wrote the submit handler for change passoword

--- a/components/DashboardPage/PasswordSection/PasswordSection.module.scss
+++ b/components/DashboardPage/PasswordSection/PasswordSection.module.scss
@@ -17,6 +17,7 @@
     }
   }
   .form {
+    position: relative;
     margin-top: 3rem;
     border-radius: 3px;
     background-color: $color-white;
